1. 首页资源推荐已修改为从数据库计算得出； 2. 设计简单的资源详情页，但发布者显示问题尚未修正； 3. 解决了部分跨域问题以及阻碍测试的鉴权问题； 4. 设计EmbeddingGraph.vue组件可视化管理GNN Embedding图； 5. 添加三类型资源的测试资源。